samples/_failures_safe/1761534091_1c8bc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7240e9dd.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7240e9dd.c:159:9: error: expected declaration or statement at end of input
  159 |         tokens[token_count].column = column;
      |         ^~~~~~
./samples/SAFE/__tmp_7240e9dd.c:159:9: error: expected declaration or statement at end of input
